--- a/package.json
+++ b/package.json
@@ -107,5 +107,8 @@
     "typescript": "^5.6.2",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1"
+  },
+  "dependencies": {
+    "handlebars": "^4.7.8"
   }
 }
