--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
     "@vscode/test-electron": "^2.4.1"
   },
   "dependencies": {
-    "handlebars": "^4.7.8"
+    "@types/uuid": "^10.0.0",
+    "find-up-glob": "^1.0.0",
+    "handlebars": "^4.7.8",
+    "uuid": "^10.0.0"
   }
 }
