--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
   },
   "dependencies": {
     "@types/uuid": "^10.0.0",
-    "find-up-glob": "^1.0.0",
+    "find-up": "^7.0.0",
     "handlebars": "^4.7.8",
     "uuid": "^10.0.0"
   }
